--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/pixeboy');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 body {
   padding: 0;
@@ -90,4 +91,96 @@ body {
 }
 body {
     background-color: #1f1f1f;
+}
+
+#switchWebGL {
+padding: 10px;
+font-family: 'Pixeboy', sans-serif;
+font-size: 1.5rem;
+margin-right: 1%;
+background-color: #838383;
+color: white;
+border: none;
+border-radius: 5px;
+}
+
+#webGLinfo {
+  font-size: 1.8rem;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #1f1f1f;
+  margin: auto;
+  padding: 0;
+  border: 0px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #838383;
+  font-size: 1.8rem;
+  color: white;
+  font-family: 'Lato', sans-serif;
+}
+
+.modal-body {
+  padding: 2px 16px;
+  font-size: 1.2rem;
+  font-family: 'Lato', sans-serif;
+  color: white;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+  display: none;
 }
